Fixed met nieuwe plaatjes

--- a/src/Op5/5.1.html
+++ b/src/Op5/5.1.html
@@ -15,7 +15,7 @@
             height: 450px;
             width: 300px;
             float: left;
-            background-color: red;
+            background-color: #f6f4ff;
             border: 1px solid black;
         }
 
