--- a/src/Op3/3.1.html
+++ b/src/Op3/3.1.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-<h1>WildLifeShuffle</h1>
+<h1>MonkeyShuffle</h1>
 <div id="pics">
     <img src="aap1.jpg">
     <img src="aap2.jpg">
