--- a/src/Op3/3.1.html
+++ b/src/Op3/3.1.html
@@ -30,15 +30,15 @@
 <body>
 <h1>MonkeyShuffle</h1>
 <div id="pics">
-    <img src="aap1.jpg">
-    <img src="aap2.jpg">
-    <img src="aap3.jpg">
-    <img src="aap4.jpg">
-    <img src="aap5.jpg">
-    <img src="aap6.jpg">
-    <img src="aap7.jpg">
-    <img src="aap8.jpg">
-    <img src="aap9.jpg">
+    <img src=".../img/aap1.jpg">
+    <img src=".../img/aap2.jpg">
+    <img src=".../img/aap3.jpg">
+    <img src=".../img/aap4.jpg">
+    <img src=".../img/aap5.jpg">
+    <img src=".../img/aap6.jpg">
+    <img src=".../img/aap7.jpg">
+    <img src=".../img/aap8.jpg">
+    <img src=".../img/aap9.jpg">
 </div>
 <script src="3.1.js"> </script>
 </body>
